# c_cpp_libs

./: .clang-format  .gitignore  MEREAD.md  README.md
c/: CMakeLists.txt
c/arithmetic/include/: arith_utils.h  arithmetic.h  complex.h  integer.h  long_long_long.h  math_func.h
c/arithmetic/src/: arith_utils.c  float2frac.c  high_prec_calc.c  integer.c  long_long_long.c  math_func.c  math_func_op.c  polynomial.c
c/geometry/: CMakeLists.txt
c/geometry/include/: geom_utils.h  geometry.h  graphical.h  point_set.h
c/geometry/src/: geom_utils.c  graphical.cpp  point_set.c
c/graph/: CMakeLists.txt
c/graph/include/adjacency_list/: Euler_path.h  aonGraph.h  edge.h  find_articulation.h  find_scc.h  graph.h  init_indegree.h  max_flow.h  min_spanning_tree.h  topsort.h  unweighed_path.h  weight_path.h
c/graph/src/: linked_list.c  linked_path.c
c/misc/: calculate24.c  compress.c
c/misc/include/: turnpike_reconstruction.h
c/misc/src/: KMP.c  turnpike_reconstruction.c
c/simple_algorithm/include/: kalman.h
c/simple_algorithm/src/: KMP.c  ant_colony.c  kalman.c  turnpike_reconstruction.c
c/somefun/: CMakeLists.txt  calculate24.c
c/test/: CMakeLists.txt  main.c
c/tree/include/: Huffman.h  OBST.h  binary_search_tree.h  binary_tree.h  tree.h  tree_alg.h
c/tree/src/: Huffman.c  OBST.c  binary_search_tree.c  binary_tree.c  tree.c  tree_print.c
c/utils/: CMakeLists.txt  disjoint_set.h  heap.h  link_like.h  link_node.h  queue.h  sort.c  sort.h  stack.h  timer.h
cpp/: CMakeLists.txt  test.cpp
cpp/OR/: CMakeLists.txt  linear.cpp  linear.h  linear.hpp  linear.tpp  share.hpp  transport.cpp  transport.hpp  transport.tpp
cpp/expr/: CMakeLists.txt  expr.hpp
cpp/infer/: CMakeLists.txt  simple.hpp  vino.cpp  vino.h  vino_async.cpp  vino_async.hpp
cpp/infer/src/: vino.cpp
cpp/socket/: CMakeLists.txt  socket.cpp  socket.hpp
cpp/thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.hpp  thread_pool.tpp
(+123 files in other folders)
